# wotann

./: .env.example  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .npmignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT_REALITY_AND_MOAT_NOTES_2026-04-03.md  CONTRIBUTING.md  CREDENTIALS_NEEDED.md  DECISIONS.md  FEATURE_MOAT_ROADMAP_2026-04-03.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  LICENSE  MARKDOWN_CORPUS_AUDIT_2026-04-03.md  NOTICE  README.md  RESEARCH_GAP_ANALYSIS_2026-04-02.md  ROADMAP.md  SECURITY.md  SOURCES_COVERAGE_AUDIT_2026-04-02.md  SOURCE_EXTRACTION_MATRIX_2026-04-03.md  TERMINALBENCH_STRATEGY.md  eslint.config.js  install.sh  package-lock.json  package.json  sea.config.json  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
desktop-app/src-tauri/: .gitignore  Cargo.toml  Entitlements.mac.plist  Info.plist  build.rs  tauri.conf.json
desktop-app/src-tauri/.cargo/: audit.toml  config.toml
desktop-app/src-tauri/binaries/: ollama-aarch64-apple-darwin
desktop-app/src-tauri/capabilities/: default.json  fs.json  shell.json  ui.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: audio_capture.rs  commands.rs  cursor_overlay.rs  hotkeys.rs  input.rs  ipc_client.rs  lib.rs  localsend.rs  main.rs  sidecar.rs  state.rs  tray.rs
desktop-app/src-tauri/src/computer_use/: input.rs  mod.rs  permissions.rs  screen.rs
desktop-app/src-tauri/src/remote_control/: mod.rs
desktop-app/src-tauri/tests/: security.rs
desktop-app/src-tauri/wotann-runtime/: README.md
site/: CNAME  (+8 more)
(+2462 files in other folders)
